objects/Job_Qualification__c.object
<CustomObject>
    <fields>
        <fullName>Importance__c</fullName>
        <label>Importance</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Desired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Posting__c</fullName>
        <label>Job Posting</label>
        <referenceTo>Job_Posting__c</referenceTo>
        <relationshipName>Job_Qualifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Qualifications__c</fullName>
        <globalPicklist>Qualifications</globalPicklist>
        <label>Qualifications</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>DEPRECATED Job Qualification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Importance__c</columns>
        <columns>Weight__c</columns>
        <columns>Qualifications__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JQN-{0000}</displayFormat>
        <label>Job Qualification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Qualifications</pluralLabel>
    <recordTypes>
        <fullName>Skill</fullName>
        <active>true</active>
        <label>Skill</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>